testsuite/bsc.typechecker/kind/DataDefParamGivenNonNumUsedFunc.bs.bsc-out.expected
checking package dependencies
compiling DataDefParamGivenNonNumUsedFunc.bs
Error: "DataDefParamGivenNonNumUsedFunc.bs", line 3, column 37: (T0023)
  The type `x' does not take an argument.
