testsuite/bsc.typechecker/kind/DataDefParamGivenNonNumUsedFunc.bs
package DataDefParamGivenNonNumUsedFunc () where

data (Foo :: * -> * -> *) x y = Bar (x y)

